# P6-TDA-Arbol

./: CMakeLists.txt  p06_JuanNicolas_BecerraRogatinscaia_mod.tgz
data/: data.txt
include/: ab.hpp  abb.hpp  abe.hpp  avl.hpp  nif.hpp  nodoavl.hpp  nodob.hpp  test.hpp
src/: main.cpp
